# isaac-sim-pick-place

./: .gitignore  README.md  requirements.txt
isaac-usd/omni_graph_script_node_usda/: attach_detach_fixed_joint.py
scripts/: build_with_venv.sh  launch_pipeline.sh  setup_env.sh
src/grasping/: package.xml  setup.cfg  setup.py  usage.md
src/grasping/config/: ggcnn_service.yaml
src/grasping/grasping/util/: inference.py
src/grasping/ros2_ggcnn/: ggcnn2.py  ggcnn_service.py
src/grasping/ros2_ggcnn/util/: __init__.py  depth_utils.py
src/object_detection/: package.xml  setup.cfg  setup.py
src/object_detection/config/: default.yaml
src/object_detection/launch/: detection.launch.py
src/object_detection/object_detection/: detection_service.py
src/object_detection/object_detection/util/: image_utils.py  inference.py  pointcloud_utils.py
src/so101_bringup/: package.xml
src/so101_bringup/launch/: bringup_moveit.launch.py
src/so101_description/: package.xml
src/so101_interfaces/: CMakeLists.txt  package.xml
src/so101_interfaces/srv/: ComputeGrasp.srv  DeleteCube.srv  DetectObject.srv  MoveGripper.srv  MoveToPose.srv  SpawnCube.srv
src/so101_moveit_config/: package.xml
src/so101_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  so101_new_calib.ros2_control.xacro  so101_new_calib.srdf
src/so101_moveit_interface/: CMakeLists.txt  package.xml
src/so101_moveit_interface/config/: move_gripper.yaml  move_to_pose.yaml  spawn_cube.yaml
src/so101_moveit_interface/src/: move_gripper_server.cpp  move_to_pose_server.cpp  spawn_cube_server.cpp
src/so101_state_machine/: package.xml  setup.cfg  setup.py
src/so101_state_machine/launch/: pick_and_place.launch.py
src/so101_state_machine/so101_state_machine/: bt_node.py  tree.py
src/so101_state_machine/so101_state_machine/behaviours/: __init__.py  attach_detach.py  bt_helpers.py  grabbing.py  move_to_box_position.py  open_gripper.py
